--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ui-kit",
-  "version": "0.0.1",
-  "type": "module",
+  "version": "0.0.0",
   "license": "MIT",
   "author": "Viet Nam Nguyen",
   "scripts": {
     "lint": "eslint .",
+    "types:check": "tsc --skipLibCheck --noEmit",
     "format": "prettier --write **/*.{js,ts,jsx,tsx}"
   },
   "devDependencies": {
@@ -17,5 +17,5 @@
     "prettier": "^3.3.3",
     "typescript-eslint": "^8.1.0"
   },
-  "packageManager": "pnpm@9.7.0+sha512.dc09430156b427f5ecfc79888899e1c39d2d690f004be70e05230b72cb173d96839587545d09429b55ac3c429c801b4dc3c0e002f653830a420fa2dd4e3cf9cf"
+  "packageManager": "pnpm@9.7.0"
 }
