--- a/apps/react-playground/package.json
+++ b/apps/react-playground/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@namui/react/components/button": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
