--- a/packages/react/components/button/package.json
+++ b/packages/react/components/button/package.json
@@ -2,6 +2,7 @@
   "name": "@namui/react/components/button",
   "version": "0.0.1",
   "license": "MIT",
+  "main": "./src/index.tsx",
   "author": "Viet Nam Nguyen",
   "homepage": "https://github.com/namvnngu/namui",
   "repository": {
