--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,5 +3,5 @@ packages:
   - "packages/**"
 
 catalog:
-  react: "^16.8 || ^17.0 || ^18.0 || ^19.0 || ^19.0.0-rc"
-  react-dom: "^16.8 || ^17.0 || ^18.0 || ^19.0 || ^19.0.0-rc"
+  react: ">=16.8 || <=19.0"
+  react-dom: ">=16.8 || <=19.0"
